vlib/v/checker/tests/immutable_array_field_assign.out
vlib/v/checker/tests/immutable_array_field_assign.vv:9:4: error: field `i` of struct `Aaa` is immutable
    7 |         i: [0]
    8 |     }
    9 |     a.i[0] = 3
      |       ^
   10 | }
