vlib/v/checker/tests/immutable_array_field_assign.vv
struct Aaa {
	i []int
}

fn main() {
	mut a := Aaa{
		i: [0]
	}
	a.i[0] = 3
}
